--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,7 @@ html, body {
 }
 
 body {
-    
+    background: url('../pacote_projeto/images/neon1.WebP') ;
     background-size: cover;
     background-attachment: fixed;
 }
@@ -25,13 +25,13 @@ main {
 }
 
 section#phone {
-    position: relative;
+    position: absolute;
     
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 
-    background: url('../pacote_projeto/images/frame-phone2.png') no-repeat;
+    background: url('../pacote_projeto/images/frame-phone.png') no-repeat;
     width: 448px;
     height: 627px;
 }
