--- a/styles/style.css
+++ b/styles/style.css
@@ -45,3 +45,23 @@ iframe#screen {
     height: 535px;
     
 }
+
+section#icons {
+    text-align: right;
+}
+
+section#icons img {
+    width: 60px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.432);
+    box-sizing: border-box;
+}
+
+section#icons img:hover {
+    border: 2px solid rgba(94, 121, 241, 0.582);
+    transform: translate(-3% -3%);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.732);
+    transition: transform .5s, border 2s;
+}
+
