Alterando local dos ícones

--- a/styles/smartphone.css
+++ b/styles/smartphone.css
@@ -8,13 +8,14 @@ html, body {
 }
 
 section#icons img {
-    width: 10px;
+    width: 30px;
     margin: 10px;
     border-radius: 50%;
     box-shadow: 2px 2px 5px rgba(255, 255, 255, 0.322);
     box-sizing: border-box;
 }
 
-section#icons {
-    text-align: left;
+.bar-lateral{
+    display: none;
+    
 }
