Ajustes finos nos ícones

--- a/styles/smartphone.css
+++ b/styles/smartphone.css
@@ -9,7 +9,7 @@ html, body {
 
 section#icons img {
     width: 40px;
-    margin: 10px;
+    margin: 6px;
     border-radius: 50%;
     box-shadow: 2px 2px 5px rgba(255, 255, 255, 0.322);
     box-sizing: border-box;
@@ -17,8 +17,7 @@ section#icons img {
 
 .bar-lateral{
     display: inline-block;
-    margin-right: 15px;
-    margin-bottom: opx;
+    margin-bottom: 0px;
     
 }
 
