Adicionando imagem otimizada

--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,7 @@ html, body {
 }
 
 body {
-    background: url('../pacote_projeto/images/neon1.WebP') ;
+    background: url('../pacote_projeto/images/neon1.png') ;
     background-size: cover;
     background-attachment: fixed;
 }
